--- a/.github/workflows/github-proxy.yaml
+++ b/.github/workflows/github-proxy.yaml
@@ -13,13 +13,15 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Login to quay.io
-        run: docker login -u="${{ secrets.QUAY_USER }}" -p="${{ secrets.QUAY_PASSWORD }}" quay.io
+        run: echo "${{ secrets.QUAY_PASSWORD }}" | docker login -u="${{ secrets.QUAY_USER }}" --password-stdin quay.io
 
       - name: Build the Docker image
         run: |
           IMAGE_NAME="quay.io/alitman_storage_ocs/github-proxy:${GITHUB_REF##*/}"
-          CONTAINER_RUNTIME=docker IMG="${IMAGE_NAME}" ${CONTAINER_RUNTIME} build -t ${IMG}
+          docker build -t "${IMAGE_NAME}" .
           echo "IMAGE_NAME=${IMAGE_NAME}" >> $GITHUB_ENV
 
       - name: Push the Docker image
-        run: CONTAINER_RUNTIME=docker IMG="${{ env.IMAGE_NAME }}" ${CONTAINER_RUNTIME} push ${IMG}
+        run: |
+          docker push "${{ env.IMAGE_NAME }}"
+
